k8s/03-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logiflow-redis
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logiflow-redis
  template:
    metadata:
      labels:
        app: logiflow-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: logiflow-redis
  namespace: logiflow
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: logiflow-redis
