k8s/04-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logiflow-zookeeper
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logiflow-zookeeper
  template:
    metadata:
      labels:
        app: logiflow-zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: logiflow-zookeeper
  namespace: logiflow
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: logiflow-zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logiflow-kafka
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logiflow-kafka
  template:
    metadata:
      labels:
        app: logiflow-kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: logiflow-kafka
  namespace: logiflow
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: logiflow-kafka
